fix: use fit content for color wheel to prevent color picker overflowing

--- a/public/ncsassets/css/editor.css
+++ b/public/ncsassets/css/editor.css
@@ -2513,8 +2513,8 @@ button:disabled:active {
   margin-right: 4px;
 }
 
-.colorpicker .jQWCP-wWidget.jQWCP-block{
-  height: 240px;
+.colorpicker .jQWCP-wWidget.jQWCP-block {
+  height: fit-content;
 }
 
 .jQWCP-wPreview {
